--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="styles/flexslider.css" type="text/css">
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/index.css" rel="stylesheet" type="text/css" />
 		<script src="scripts/jquery-1.10.1.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="javascript/script.js"></script>
-		<!--flexslider-->
-		<link rel="stylesheet" href="styles/flexslider.css" type="text/css">
 		<script src="scripts/jquery.flexslider-min.js"></script>
-		<script type="text/javascript" charset="utf-8">
-			$(window).load(function() {
-				$('.flexslider').flexslider({
-				animation: 'slide',
-				slideshowSpeed: 5000,
-				animationSpeed: 1000,
-				pauseOnAction: true,
-				touch: true,
-				directionNav: true,
-				});
-			});
-		</script>
-		<!--end flexslider-->
 		<title>Orange Twist Jewelry | Home</title>
 	</head>
 	<body>
-		<a href="index.html"> <img src="images/OTLogo2016.png"/> </a>
+		<header>
+			<a href="index.html"> <img src="images/OTLogo2016.png"/> </a>
+		</header>
 		<main>
 			<header>
 				<div id="links">
@@ -45,8 +33,6 @@
 				</div>
 			</header>
 			<section>
-				<!--slider-->
-				<div id="top"></div>
 				<div class="flexslider">
 					<ul class="slides">
 						<li> <img src="images/cover/1.jpg" alt="Cover 1"/> </li>
@@ -55,42 +41,33 @@
 						<li> <img src="images/cover/4.jpg" alt="Cover 4"/> </li>
 					</ul>
 				</div>
-				<!--end slider-->
-				<div id="main_title">
-					<p id="main_titletxt">2016-17 Collection</p>
-				</div>
-					<div id="main_text">
-						<p id="main_texttxt">
-							With a hand-picked selection of gorgeous pearls, crystals and precious stones showcased
-							in eye-catching designs, Orange Twist Jewelry is a perennial crowd pleaser. Our latest
-							selections include bestselling classic hand-knotted pearl necklaces in a variety of 
-							colors and designs from a demure choker length single strand to our signature luxurious
-							five strand twist. Orange Twist’s featured looks will take you from sun-kissed summer
-							in our stunning selection of amazonite and pearl pieces to the most glittering holiday
-							parties in classic pearls or our colorful crystal necklaces, many with pearl 
-							embellishments. At Orange Twist we pride ourselves in creating beautiful, unique and
-							functional jewelry which will please the most discerning customers.
-							<br /><br />
-							For more information on Orange Twist, please contact our outstanding team of 
-							<a href="contact.html">Sales Agents</a> 
-							who will be pleased to introduce you to our company and its offerings.
-						</p>
-					</div>
-				<div id="index_buffer"></div>
-				<div id="slider">
-					<div id="slider_title">
-						<p id="slider_titletxt">Orange Twist Bestsellers</p>
-					</div>
-					<img id="title_triangles" src="images/TitleBar.png"/>
-					<div id="slider_box">
-						<div style="margin-left:8px;">
+				<article>
+					<h1>2016-17 Collection</h1>
+					<p>
+						With a hand-picked selection of gorgeous pearls, crystals and precious stones showcased
+						in eye-catching designs, Orange Twist Jewelry is a perennial crowd pleaser. Our latest
+						selections include bestselling classic hand-knotted pearl necklaces in a variety of 
+						colors and designs from a demure choker length single strand to our signature luxurious
+						five strand twist. Orange Twist’s featured looks will take you from sun-kissed summer
+						in our stunning selection of amazonite and pearl pieces to the most glittering holiday
+						parties in classic pearls or our colorful crystal necklaces, many with pearl 
+						embellishments. At Orange Twist we pride ourselves in creating beautiful, unique and
+						functional jewelry which will please the most discerning customers.
+						<br /><br />
+						For more information on Orange Twist, please contact our outstanding team of 
+						<a href="contact.html">Sales Agents</a> 
+						who will be pleased to introduce you to our company and its offerings.
+					</p>
+					<div class="slider">
+						<h2>Orange Twist Bestsellers</h2>
+						<div>
 							<a href="jewelry.html">
 								<div class="grid-block-container">
 									<div class="grid-block fade">
 										<div class="caption"> 
 											<h3>NX112w</h3> 
 										</div>
-										<img id="image_slider" src="images/spin/1.jpg" alt="1">
+										<img src="images/spin/1.jpg" alt="1">
 									</div>
 								</div>
 							</a>
@@ -100,7 +77,7 @@
 										<div class="caption"> 
 											<h3>N731</h3> 
 										</div>
-										<img id="image_slider" src="images/spin/2.jpg" alt="2">
+										<img src="images/spin/2.jpg" alt="2">
 									</div>
 								</div>
 							</a>
@@ -110,7 +87,7 @@
 										<div class="caption"> 
 											<h3>N853</h3>
 										</div>
-										<img id="image_slider" src="images/spin/3.jpg" alt="3">
+										<img src="images/spin/3.jpg" alt="3">
 									</div>
 								</div>
 							</a>
@@ -120,72 +97,61 @@
 										<div class="caption"> 
 											<h3>N610w</h3> 
 										</div>
-										<img id="image_slider" src="images/spin/4.jpg" alt="4">
+										<img src="images/spin/4.jpg" alt="4">
+									</div>
+								</div>
+							</a>
+						</div>    
+					</div>
+					<div class="slider">
+						<h2>Bracelets and Earrings</h2>
+						<div>
+							<a href="jewelry.html">
+								<div class="grid-block-container">
+									<div class="grid-block fade">
+										<div class="caption"> 
+											<h3>B610w</h3> 
+										</div>
+										<img src="images/spin/5.jpg" alt="1">
+									</div>
+								</div>
+							</a>
+							<a href="jewelry.html">
+								<div class="grid-block-container">
+									<div class="grid-block fade">
+										<div class="caption"> 
+											<h3>E202</h3> 
+										</div>
+										<img src="images/spin/6.jpg" alt="2">
+									</div>
+								</div>
+							</a>
+							<a href="jewelry.html">
+								<div class="grid-block-container">
+									<div class="grid-block fade">
+										<div class="caption"> 
+											<h3>B513</h3> 
+										</div>
+										<img src="images/spin/7.jpg" alt="3">
+									</div>
+								</div>
+							</a>
+							<a href="jewelry.html">
+								<div class="grid-block-container">
+									<div class="grid-block fade">
+										<div class="caption"> 
+											<h3>E140</h3> 
+										</div>
+										<img src="images/spin/8.jpg" alt="4">
 									</div>
 								</div>
 							</a>
 						</div>
-					</div>    
-					<div id="slider">
-						<div id="slider_title">
-							<p id="slider_titletxt">Bracelets and Earrings</p>
-						</div>
-						<img id="title_triangles" src="images/TitleBar.png"/>
-						<div id="slider_box">
-							<div style="margin-left:8px;">
-								<a href="jewelry.html">
-									<div class="grid-block-container">
-										<div class="grid-block fade">
-											<div class="caption"> 
-												<h3>B610w</h3> 
-											</div>
-											<img id="image_slider" src="images/spin/5.jpg" alt="1">
-										</div>
-									</div>
-								</a>
-								<a href="jewelry.html">
-									<div class="grid-block-container">
-										<div class="grid-block fade">
-											<div class="caption"> 
-												<h3>E202</h3> 
-											</div>
-											<img id="image_slider" src="images/spin/6.jpg" alt="2">
-										</div>
-									</div>
-								</a>
-								<a href="jewelry.html">
-									<div class="grid-block-container">
-										<div class="grid-block fade">
-											<div class="caption"> 
-												<h3>B513</h3> 
-											</div>
-											<img id="image_slider" src="images/spin/7.jpg" alt="3">
-										</div>
-									</div>
-								</a>
-								<a href="jewelry.html">
-									<div class="grid-block-container">
-										<div class="grid-block fade">
-											<div class="caption"> 
-												<h3>E140</h3> 
-											</div>
-											<img id="image_slider" src="images/spin/8.jpg" alt="4">
-										</div>
-									</div>
-								</a>
-							</div>
-						</div>
-						<div id="slider_link_box">
-							<div id="slider_link">
-								<a style="text-decoration:none" href="assets/OT-2016.pdf" target:newtab>
-									<p id="slider_linktxt">Download the 2016-17 Orange Twist Jewelry Collection Catalog
-										<img src="images/PDF_Icon.png"/>
-									</p>
-								</a>
-							</div>
-						</div>
 					</div>
-				</div>
+					<a href="assets/OT-2016.pdf" target:"newtab">
+						<h3> Download the 2016-17 Orange Twist Jewelry Collection Catalog </h3>
+					</a>
+				</article>
 			</section>
 			<footer>
 				<p>
