--- a/jewelry.html
+++ b/jewelry.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="styles/flexslider.css" type="text/css">
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/jewelry.css" rel="stylesheet" type="text/css" />
 		<script src="scripts/jquery-1.10.1.min.js"type="text/javascript"></script>
 		<script type="text/javascript" src="javascript/script.js"></script>
-		<link rel="stylesheet" href="styles/flexslider.css" type="text/css">
 		<script src="scripts/jquery.flexslider-min.js"></script>
-		<script type="text/javascript" charset="utf-8">
-			$(window).load(function() {
-				$('.flexslider').flexslider({
-				animation: 'slide',
-				slideshowSpeed: 10000,
-				animationSpeed: 1000,
-				pauseOnAction: true,
-				touch: true,
-				directionNav: true,
-				});});
-		</script>
 		<title>Orange Twist Jewelry | Jewelry</title>
 	</head>
 	<body>
-		<a href="index.html"> <img src="images/OTLogo2016.png"/> </a>
+		<header>
+			<a href="index.html"> <img src="images/OTLogo2016.png"/> </a>
+		</header>
 		<main>
 			<header>
 				<div id="links">
@@ -42,47 +33,35 @@
 				</div>
 			</header>
 			<section>
-				<!--slider-->
-				<div id="top"></div>
-				<center>
-						<div class="flexslider">
-							<ul class="slides">
-								<li> <img src="images/Jewelry1.jpg" /> </li>
-								<li> <img src="images/Jewelry2.jpg" /> </li>
-							</ul>
-						</div>
-				</center>
-				<!--end slider-->
-				<div id="main_title">
-					<p id="main_titletxt">Jewelry</p>
-				</div>	
-				<div id="jewelry_buttons">
-					<a href="assets/OT-2016.pdf" target=newtab title="Click to view">
-						<div id="jewelry_view">
-							<p id="jewelry_viewtxt">View the 2016-17 Orange Twist Jewelry Collection Catalog</p>
-						</div>
+				<div class="flexslider">
+					<ul class="slides">
+						<li> <img src="images/jewelry/1.jpg" alt="Cover 1"/> </li>
+						<li> <img src="images/jewelry/2.jpg" alt="Cover 2" /> </li>
+					</ul>
+				</div>
+				<article>
+					<h1>Jewelry</h1>
+					<a href="assets/OT-2016.pdf" target:"newtab">
+						<h3> View the 2016-17 Orange Twist Jewelry Collection Catalog </h3>
 					</a>
-				</div>
-				<div id="jewelry_buffer"></div>
-				<div id="jewelry_box">
-					<div id="jewelry_pages"> 
-						<img src="images/Catalog/OT_Page_01.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_02.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_03.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_04.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_05.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_06.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_07.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_08.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_09.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_10.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_11.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_12.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_13.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_14.jpg" id="jewelry_pages_actual"/>
-							<img src="images/Catalog/OT_Page_15.jpg" id="jewelry_pages_actual"/>            				
+					<div> 
+						<div> <img src="images/catalog/1.jpg"/> </div>
+						<div> <img src="images/catalog/2.jpg"/> </div>
+						<div> <img src="images/catalog/3.jpg"/> </div>
+						<div> <img src="images/catalog/4.jpg"/> </div>
+						<div> <img src="images/catalog/5.jpg"/> </div>
+						<div> <img src="images/catalog/6.jpg"/> </div>
+						<div> <img src="images/catalog/7.jpg"/> </div>
+						<div> <img src="images/catalog/8.jpg"/> </div>
+						<div> <img src="images/catalog/9.jpg"/> </div>
+						<div> <img src="images/catalog/10.jpg"/> </div>
+						<div> <img src="images/catalog/11.jpg"/> </div>
+						<div> <img src="images/catalog/12.jpg"/> </div>
+						<div> <img src="images/catalog/13.jpg"/> </div>
+						<div> <img src="images/catalog/14.jpg"/> </div>
+						<div> <img src="images/catalog/15.jpg"/> </div>
 					</div>
-				</div>
+				</article>
 			</section>
 			<footer>
 				<p>
