--- a/jewelry.html
+++ b/jewelry.html
@@ -16,8 +16,8 @@
 		<main>
 			<header>
 				<div id="links">
-					<a class="selected" href="index.html"> <p>Home</p> </a>
-					<a href="jewelry.html"> <p>Jewelry</p> </a>
+					<a href="index.html"> <p>Home</p> </a>
+					<a class="selected" href="jewelry.html"> <p>Jewelry</p> </a>
 					<a href="about.html"> <p>About Us</p> </a>
 					<a href="retail.html"> <p>Retailers</p> </a>
 					<a href="contact.html"> <p>Contact</p> </a>
