Optimized script loading

--- a/about.html
+++ b/about.html
@@ -3,8 +3,6 @@
 	<head>
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/about.css" rel="stylesheet" type="text/css" />
-		<script src="scripts/jquery-1.10.1.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="javascript/script.js"></script>
 		<title>Orange Twist Jewelry | About Us</title>
 	</head>
 	<body>
@@ -31,9 +29,7 @@
 				</div>
 			</header>
 			<section>
-				<div class="flexslider">
-					<img src="images/AboutUs.jpg" />
-				</div>
+				<div class="flexslider"></div>
 				<article>
 					<h1>About Us</h1>
 					<p>
@@ -55,7 +51,7 @@
 						wide variety of fabulous boutiques and fine museum stores around the corner and across
 						the country.  We have also proudly designed pieces for sale in a number of catalogs.
 					</p>
-					<img src="images/signature.png"/>
+					<img src="images/about/signature.png"/>
 				</article>
 			</section>
 			<footer>
