--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<link rel="stylesheet" href="styles/flexslider.css" type="text/css">
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/index.css" rel="stylesheet" type="text/css" />
-		<script src="scripts/jquery-1.10.1.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="javascript/script.js"></script>
-		<script src="scripts/jquery.flexslider-min.js"></script>
+		<script src="scripts/jquery/jquery-1.10.1.min.js"></script>
+		<script src="scripts/jquery/jquery.flexslider-min.js"></script>
+		<script src="scripts/flexslider.js"></script>
+		<script src="scripts/index.js"></script>
 		<title>Orange Twist Jewelry | Home</title>
 	</head>
 	<body>
