--- a/retail.html
+++ b/retail.html
@@ -3,10 +3,8 @@
 	<head>
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/retail.css" rel="stylesheet" type="text/css" />
-		<script src="scripts/jquery-1.10.1.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="javascript/script.js"></script>
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAME8im3xQY-WxsD5h7aYK9UfwQoxtmD3Y"></script>
-		<script type="text/javascript" src="javascript/map.js"></script>
+		<script src="scripts/retail.js"></script>
 		<title>Orange Twist Jewelry | Retailers</title>
 	</head>
 	<body>
@@ -34,7 +32,7 @@
 			</header>
 			<section>
 				<div class="flexslider">
-					<div id="map" style="width: 1000px; height: 380px;"> </div>
+					<div id="map"> </div>
 				</div>
 				<article>
 					<h1>Retailers</h1>
