--- a/index.html
+++ b/index.html
@@ -63,43 +63,33 @@
 						<h2>Orange Twist Bestsellers</h2>
 						<div>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>NX112w</h3> 
-										</div>
-										<img src="images/spin/1.jpg" alt="1">
-									</div>
+								<div class="grid-block fade">
+									<h3 class="caption">NX112w</h3> 
+									<img src="images/spin/1.jpg" alt="1">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>N731</h3> 
-										</div>
-										<img src="images/spin/2.jpg" alt="2">
+								<div class="grid-block fade">
+									<div class="caption"> 
+										<h3>N731</h3> 
 									</div>
+									<img src="images/spin/2.jpg" alt="2">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>N853</h3>
-										</div>
-										<img src="images/spin/3.jpg" alt="3">
+								<div class="grid-block fade">
+									<div class="caption"> 
+										<h3>N853</h3>
 									</div>
+									<img src="images/spin/3.jpg" alt="3">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>N610w</h3> 
-										</div>
-										<img src="images/spin/4.jpg" alt="4">
+								<div class="grid-block fade">
+									<div class="caption"> 
+										<h3>N610w</h3> 
 									</div>
+									<img src="images/spin/4.jpg" alt="4">
 								</div>
 							</a>
 						</div>    
@@ -108,48 +98,40 @@
 						<h2>Bracelets and Earrings</h2>
 						<div>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>B610w</h3> 
-										</div>
-										<img src="images/spin/5.jpg" alt="1">
+								<div class="grid-block fade">
+									<div class="caption"> 
+										<h3>B610w</h3> 
 									</div>
+									<img src="images/spin/5.jpg" alt="1">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>E202</h3> 
-										</div>
-										<img src="images/spin/6.jpg" alt="2">
+								<div class="grid-block fade">
+									<div class="caption"> 
+										<h3>E202</h3> 
 									</div>
+									<img src="images/spin/6.jpg" alt="2">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>B513</h3> 
-										</div>
-										<img src="images/spin/7.jpg" alt="3">
+								<div class="grid-block fade">
+									<div class="caption"> 
+										<h3>B513</h3> 
 									</div>
+									<img src="images/spin/7.jpg" alt="3">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block-container">
-									<div class="grid-block fade">
-										<div class="caption"> 
-											<h3>E140</h3> 
-										</div>
-										<img src="images/spin/8.jpg" alt="4">
+								<div class="grid-block fade">
+									<div class="caption"> 
+										<h3>E140</h3> 
 									</div>
+									<img src="images/spin/8.jpg" alt="4">
 								</div>
 							</a>
 						</div>
 					</div>
-					<a href="assets/OT-2016.pdf" target:"newtab">
+					<a href="assets/OT-2016.pdf" target="newtab">
 						<h3> Download the 2016-17 Orange Twist Jewelry Collection Catalog </h3>
 					</a>
 				</article>
