Added flexible cover images

--- a/jewelry.html
+++ b/jewelry.html
@@ -7,6 +7,7 @@
 		<script src="scripts/jquery/jquery-1.10.1.min.js"></script>
 		<script src="scripts/jquery/jquery.flexslider-min.js"></script>
 		<script src="scripts/flexslider.js"></script>
+		<script src="scripts/jewelry.js"></script>
 		<title>Orange Twist Jewelry | Jewelry</title>
 	</head>
 	<body>
@@ -34,10 +35,7 @@
 			</header>
 			<section>
 				<div class="flexslider">
-					<ul class="slides">
-						<li> <img src="images/jewelry/1.jpg" alt="Cover 1"/> </li>
-						<li> <img src="images/jewelry/2.jpg" alt="Cover 2" /> </li>
-					</ul>
+					<ul class="slides" id="slides"> </ul>
 				</div>
 				<article>
 					<h1>Jewelry</h1>
