--- a/index.html
+++ b/index.html
@@ -35,12 +35,7 @@
 			</header>
 			<section>
 				<div class="flexslider">
-					<ul class="slides">
-						<li> <img src="images/cover/1.jpg" alt="Cover 1"/> </li>
-						<li> <img src="images/cover/2.jpg" alt="Cover 2" /> </li>
-						<li> <img src="images/cover/3.jpg" alt="Cover 3"/> </li>
-						<li> <img src="images/cover/4.jpg" alt="Cover 4"/> </li>
-					</ul>
+					<ul class="slides" id="slides"> </ul>
 				</div>
 				<article>
 					<h1>2016-17 Collection</h1>
