Updated content, fixes

--- a/about.html
+++ b/about.html
@@ -58,13 +58,12 @@
 				<p>
 					Orange Twist jewelry is sold exclusively to the trade. Please 
 					<a href="contact.html">contact us</a> for pricing and ordering information.
-				</p>
-				<p>
-					<a href="assets/OT-2016.pdf" target="newtab">
-						 Download the 2017-18 Orange Twist Jewelry Collection Catalog 
-					</a>
-				</p>     	
-				<p>Download our previous catalogs: 
+					<br />
+					<a href="assets/OT-2018.pdf" target="newtab">
+						 Download the 2018 Orange Twist Jewelry Collection Catalog 
+					</a>    
+					<br />
+					Download our previous catalogs: 
 					<a href="assets/OT-2016.pdf" target="newtab">2016</a>,
 					<a href="assets/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
 					<a href="assets/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
