--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<ul class="slides" id="slides"> </ul>
 				</div>
 				<article>
-					<h1>2016-17 Collection</h1>
+					<h1>2018 Collection</h1>
 					<p>
 						With a hand-picked selection of gorgeous pearls, crystals and precious stones showcased
 						in eye-catching designs, Orange Twist Jewelry is a perennial crowd pleaser. Our latest
@@ -58,32 +58,26 @@
 						<h2>Orange Twist Bestsellers</h2>
 						<div>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<h3 class="caption">NX112w</h3> 
+								<div class="fade">
+									<h4>NX112w</h4> 
 									<img src="images/spin/1.jpg" alt="1">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<div class="caption"> 
-										<h3>N731</h3> 
-									</div>
+								<div class="fade">
+									<h4>N731</h4>
 									<img src="images/spin/2.jpg" alt="2">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<div class="caption"> 
-										<h3>N853</h3>
-									</div>
+								<div class="fade">
+									<h4>N853</h4>
 									<img src="images/spin/3.jpg" alt="3">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<div class="caption"> 
-										<h3>N610w</h3> 
-									</div>
+								<div class="fade">
+									<h4>N610w</h4> 
 									<img src="images/spin/4.jpg" alt="4">
 								</div>
 							</a>
@@ -93,41 +87,33 @@
 						<h2>Bracelets and Earrings</h2>
 						<div>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<div class="caption"> 
-										<h3>B610w</h3> 
-									</div>
+								<div class="fade">
+									<h4>B610w</h4> 
 									<img src="images/spin/5.jpg" alt="1">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<div class="caption"> 
-										<h3>E202</h3> 
-									</div>
+								<div class="fade">
+									<h4>E202</h4>
 									<img src="images/spin/6.jpg" alt="2">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<div class="caption"> 
-										<h3>B513</h3> 
-									</div>
+								<div class="fade">
+									<h4>B513</h4>
 									<img src="images/spin/7.jpg" alt="3">
 								</div>
 							</a>
 							<a href="jewelry.html">
-								<div class="grid-block fade">
-									<div class="caption"> 
-										<h3>E140</h3> 
-									</div>
+								<div class="fade">
+									<h4>E140</h4>
 									<img src="images/spin/8.jpg" alt="4">
 								</div>
 							</a>
 						</div>
 					</div>
-					<a href="assets/OT-2016.pdf" target="newtab">
-						<h3> Download the 2016-17 Orange Twist Jewelry Collection Catalog </h3>
+					<a href="assets/OT-2018.pdf" target="newtab">
+						<h3> Download the 2018 Orange Twist Jewelry Collection Catalog </h3>
 					</a>
 				</article>
 			</section>
@@ -135,13 +121,12 @@
 				<p>
 					Orange Twist jewelry is sold exclusively to the trade. Please 
 					<a href="contact.html">contact us</a> for pricing and ordering information.
-				</p>
-				<p>
-					<a href="assets/OT-2016.pdf" target="newtab">
-						 Download the 2017-18 Orange Twist Jewelry Collection Catalog 
-					</a>
-				</p>     	
-				<p>Download our previous catalogs: 
+					<br />
+					<a href="assets/OT-2018.pdf" target="newtab">
+						 Download the 2018 Orange Twist Jewelry Collection Catalog 
+					</a>    
+					<br />
+					Download our previous catalogs: 
 					<a href="assets/OT-2016.pdf" target="newtab">2016</a>,
 					<a href="assets/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
 					<a href="assets/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
