--- a/jewelry.html
+++ b/jewelry.html
@@ -39,39 +39,22 @@
 				</div>
 				<article>
 					<h1>Jewelry</h1>
-					<a href="assets/OT-2016.pdf" target:"newtab">
-						<h3> View the 2016-17 Orange Twist Jewelry Collection Catalog </h3>
+					<a href="assets/OT-2018.pdf" target:"newtab">
+						<h3> View the 2018 Orange Twist Jewelry Collection Catalog </h3>
 					</a>
-					<div> 
-						<div> <img src="images/catalog/1.jpg"/> </div>
-						<div> <img src="images/catalog/2.jpg"/> </div>
-						<div> <img src="images/catalog/3.jpg"/> </div>
-						<div> <img src="images/catalog/4.jpg"/> </div>
-						<div> <img src="images/catalog/5.jpg"/> </div>
-						<div> <img src="images/catalog/6.jpg"/> </div>
-						<div> <img src="images/catalog/7.jpg"/> </div>
-						<div> <img src="images/catalog/8.jpg"/> </div>
-						<div> <img src="images/catalog/9.jpg"/> </div>
-						<div> <img src="images/catalog/10.jpg"/> </div>
-						<div> <img src="images/catalog/11.jpg"/> </div>
-						<div> <img src="images/catalog/12.jpg"/> </div>
-						<div> <img src="images/catalog/13.jpg"/> </div>
-						<div> <img src="images/catalog/14.jpg"/> </div>
-						<div> <img src="images/catalog/15.jpg"/> </div>
-					</div>
+					<div id="pages"></div>
 				</article>
 			</section>
 			<footer>
 				<p>
 					Orange Twist jewelry is sold exclusively to the trade. Please 
 					<a href="contact.html">contact us</a> for pricing and ordering information.
-				</p>
-				<p>
-					<a href="assets/OT-2016.pdf" target="newtab">
-						 Download the 2017-18 Orange Twist Jewelry Collection Catalog 
-					</a>
-				</p>     	
-				<p>Download our previous catalogs: 
+					<br />
+					<a href="assets/OT-2018.pdf" target="newtab">
+						 Download the 2018 Orange Twist Jewelry Collection Catalog 
+					</a>    
+					<br />
+					Download our previous catalogs: 
 					<a href="assets/OT-2016.pdf" target="newtab">2016</a>,
 					<a href="assets/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
 					<a href="assets/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
