Made retail.html, index.html JS-driven, contact.html slider simplificaiton

--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,11 @@
 						representatives and general information email. We look forward to hearing from you!
 					</p>  
 					<div>
-						<div id="contact_sale" class="contact_top">
+						<div class="top sale">
 							<h2>Main Contact Info</h2>
-							<img id="contact_triangle_sale" src="images/contact/show.png"/>
+							<img class="triangle sale" src="images/contact/show.png"/>
 						</div>
-						<div id="contact_slidedown_sale" class="contact_slide">
+						<div class="bottom sale">
 							<p>
 								Please contact us with any questions, press requests or more information:<br />
 								206 N. Cherry Street<br />
@@ -53,22 +53,22 @@
 								Cell: 703-403-2487 <br />
 							</p>            
 						</div>
-						<div id="contact_northeast" class="contact_top">
+						<div class="top northeast">
 							<h2>Northeast Region</h2>
-							<img id="contact_triangle_northeast" src="images/contact/show.png"/>
+							<img class="triangle northeast" src="images/contact/show.png"/>
 						</div>
-						<div id="contact_slidedown_northeast" class="contact_slide">
+						<div class="bottom northeast">
 							<p>
 								Deb Fanton<br />
 								Email: <a href="mailto:dfanton@comcast.net">dfanton@comcast.net</a><br />
 								Cell: 781-4667-9034
 							</p>            
 						</div>
-						<div id="contact_mid" class="contact_top">
+						<div class="top mid">
 							<h2>Mid-Atlantic Region</h2>
-							<img id="contact_triangle_mid" src="images/contact/show.png"/>
+							<img class="triangle mid" src="images/contact/show.png"/>
 						</div>
-						<div id="contact_slidedown_mid" class="contact_slide">
+						<div class="bottom mid">
 							<p>
 								Cindy Kilmer<br />
 								Email: <a href="mailto:andrea@myorangetwist.com">cindykilmer@myorangetwist.com</a><br />
@@ -78,22 +78,22 @@
 								Cell: 703-953-5900
 							</p>            
 						</div>
-						<div id="contact_other" class="contact_top">
+						<div class="top other">
 							<h2>Southeast, Central and West Coast Regions</h2>
-							<img id="contact_triangle_other" src="images/contact/show.png"/>
+							<img class="triangle other" src="images/contact/show.png"/>
 						</div>
-						<div id="contact_slidedown_other" class="contact_slide">
+						<div class="bottom other">
 							<p>
 								Andrea Roberson<br />
 								Email: <a href="mailto:cindykilmer@myorangetwist.com">andrea@myorangetwist.com</a><br />
 								Cell: 703-470-1996
 							</p>            
 						</div>
-						<div id="contact_national" class="contact_top">
+						<div class="top national">
 							<h2>National Sales: Museum Gift Shops</h2>
-							<img id="contact_triangle_national" src="images/contact/show.png"/>
+							<img class="triangle national" src="images/contact/show.png"/>
 						</div>
-						<div id="contact_slidedown_national" class="contact_slide">
+						<div class="bottom national">
 							<p>
 								Donald Burns, Burns Rep Group<br />
 								Email: <a href="mailto:dfjburns@msn.com">dfjburns@msn.com</a><br />
