--- a/index.html
+++ b/index.html
@@ -54,63 +54,13 @@
 						<a href="contact.html">Sales Agents</a> 
 						who will be pleased to introduce you to our company and its offerings.
 					</p>
-					<div class="slider">
+					<div class = "slider">
 						<h2>Orange Twist Bestsellers</h2>
-						<div>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>NX112w</h4> 
-									<img src="images/spin/1.jpg" alt="1">
-								</div>
-							</a>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>N731</h4>
-									<img src="images/spin/2.jpg" alt="2">
-								</div>
-							</a>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>N853</h4>
-									<img src="images/spin/3.jpg" alt="3">
-								</div>
-							</a>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>N610w</h4> 
-									<img src="images/spin/4.jpg" alt="4">
-								</div>
-							</a>
-						</div>    
+						<div class = "1"> </div>    
 					</div>
-					<div class="slider">
+					<div class = "slider">
 						<h2>Bracelets and Earrings</h2>
-						<div>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>B610w</h4> 
-									<img src="images/spin/5.jpg" alt="1">
-								</div>
-							</a>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>E202</h4>
-									<img src="images/spin/6.jpg" alt="2">
-								</div>
-							</a>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>B513</h4>
-									<img src="images/spin/7.jpg" alt="3">
-								</div>
-							</a>
-							<a href="jewelry.html">
-								<div class="fade">
-									<h4>E140</h4>
-									<img src="images/spin/8.jpg" alt="4">
-								</div>
-							</a>
-						</div>
+						<div class = "2"> </div>
 					</div>
 					<a href="assets/OT-2018.pdf" target="newtab">
 						<h3> Download the 2018 Orange Twist Jewelry Collection Catalog </h3>
