--- a/retail.html
+++ b/retail.html
@@ -3,6 +3,7 @@
 	<head>
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/retail.css" rel="stylesheet" type="text/css" />
+		<script src="scripts/jquery/jquery-1.10.1.min.js"></script>
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAME8im3xQY-WxsD5h7aYK9UfwQoxtmD3Y"></script>
 		<script src="scripts/map.js"></script>
 		<script src="scripts/retail.js"></script>
@@ -41,340 +42,7 @@
 						Orange Twist has traveled a good bit of the globe to assemble our collections. You 
 						can find our designs at our fabulous sisterhood of Boutiques and Retailers below.
 					</p>
-					<div>
-						<span>CALIFORNIA</span>
-						<br />
-
-						<b>Charles W. Bowers Museum of Art</b><br />
-						40 Presidential Dr.<br />
-						Santa Ana, CA  92706<br />
-						714-567-3622<br />
-						<br />
-
-						<b>Ronald Reagan Presidential Museum Gift Store</b><br />
-						3446 28th St.<br />
-						Simi Valley, CA  93065-0600<br />
-						800-998-7641<br />
-						<br />
-
-						<br />
-						<span>CONNECTICUT</span>
-						<br />
-
-						<b>Astrid</b><br />
-						255 North Parker Rd.<br />
-						Killingworth, CT  06419<br />
-						860-663-2403<br />
-						<br />
-
-						<b>Country Shop of Madison</b><br />
-						684 Boston Post Rd.<br />
-						Madison, CT  06443-3045<br />
-						203-318-0368<br />
-						<br />
-
-						<b>La Moda</b><br />
-						1434 Post Rd.<br />
-						Fairfield, CT  06824<br />
-						203-254-2112<br />
-						<br />
-
-						<b>Odeon</b><br />
-						918 Whalley Ave<br />
-						New Haven, CT  06515<br />
-						<br />
-
-						<b>Sound Beach Sportswear</b><br />
-						239 Sound Beach Ave<br />
-						Old Greenwich, CT  06870<br />
-						<br />
-
-						<b>Swank on Bank</b><br />
-						16 Bank St.<br />
-						New Milford, CT 06776<br />
-						<br />
-
-						<b>Tracy Brent</b><br />
-						76 Broad St.<br />
-						Guilford, CT  06437<br />
-						<br />
-
-						<br />
-						<span>DC</span>
-						<br />
-
-						<b>Hillwood Estate Museum and Gardens</b><br />
-						4155 Linnean Ave NW<br />
-						Washington, DC  20008<br />
-						202-243-3931<br />
-						<br />
-
-						<b>The Kennedy Center Gift Shops</b><br />
-						2700 F St. NW<br />
-						Washington, DC  20566<br />
-						<br />
-
-						<b>National Building Museum</b><br />
-						401 F St. NW<br />
-						Washington, DC  20001<br />
-						<br />
-
-						<b>National Gallery of Art</b><br />
-						4th and Constituation Ave NW<br />
-						Washington, DC  20565<br />
-						202-789-3168<br />
-						<br />
-
-						<b>National Museum of Women in the Arts</b><br />
-						250 New York Ave NW<br />
-						Washington, DC  20005<br />
-						202-783-7994<br />
-						<br />
-
-						<br />
-						<span>FLORIDA</span>
-						<br />
-
-						<b>Carmine's Gift Shop</b><br />
-						2401 PGA Blvd, Suite 172<br />
-						Palm Beach Gardens, FL  33410<br />
-						<br />
-
-						<b>Lemon Twist Shop Florida</b><br />
-						900 Sawgrass Village Dr.<br />
-						Ponte Vedra Beach, FL  32082<br />
-						904-280-5955<br />
-						<br />
-
-						<b>Morse Museum of Art</b><br />
-						445 North Park Ave<br />
-						Winter Park, FL  32789<br />
-						407-645-5311<br />
-						<br />
-
-						<br />
-						<span>MASSACHUSETTS</span>
-						<br />
-
-						<b>Alikat</b><br />
-						1 South Market Building Floor 3<br />
-						Boston, MA  02109<br />
-						978-887-0945<br />
-						<br />
-
-						<b>Bryn Walker - Edgartown</b><br />
-						211 Kelley St.<br />
-						Edgartown, MA  02539<br />
-						508-627-7715<br />
-						<br />
-
-						<b>Bryn Walker - Vineyard Haven</b><br />
-						16 Main St.<br />
-						Vineyard Haven, MA  02539<br />
-						508-693-8340<br />
-						<br />
-
-						<b>Collections on Court</b><br />
-						2 Court St.<br />
-						Plymouth, MA  02360<br />
-						508-732-9850<br />
-						<br />
-
-						<b>Herlihy's Jewelry</b><br />
-						76 Maple St.<br />
-						Florence, MA  01062<br />
-						413-584-2283<br />
-						<br />
-
-						<b>Lola Tortola</b><br />
-						81 Chapel St.<br />
-						Needham, MA  02492<br />
-						781-455-0018<br />
-						<br />
-
-						<b>Museum of Fine Arts Boston</b><br />
-						465 Huntington Ave<br />
-						Boston, MA  02115<br />
-						617-369-4273<br />
-						<br />
-
-						<b>Sportworks</b><br />
-						45 Depot St.<br />
-						Duxbury, MA  02331<br />
-						781-934-9501<br />
-						<br />
-
-						<b>Sundance</b><br />
-						497 Main St.<br />
-						Chatham, MA  02633<br />
-						508-945-5096<br />
-						<br />
-
-						<b>Tre Jolie</b><br />
-						161 Washington St.<br />
-						East Walpole, MA  02032<br />
-						508-660-7161<br />
-						<br />
-
-						<br />
-						<span>MARYLAND</span>
-						<br />
-
-						<b>Lemon Twist - Chevy Chase</b><br />
-						8541 Connecticut Ave<br />
-						Chevy Chase, MD  20815<br />
-						<br />
-
-						<b>The Walters Art Museum</b><br />
-						600 North Charles St.<br />
-						Baltimore, MD 21201<br />
-						410-547-9000x208<br />
-						<br />
-
-						<br />
-						<span>MAINE</span>
-						<br />
-
-						<b>House of Logan</b><br />
-						PO Box 387<br />
-						Boothbay Harbor, ME 04538<br />
-						781-467-9034<br />
-						<br />
-
-						<br />
-						<span>NEW HAMPSHIRE</span>
-						<br />
-
-						<b>Alice Blues</b><br />
-						10 School St.<br />
-						Peterborough, NH  03458<br />
-						603-924-6520<br />
-						<br />
-
-						<b>Miranda</b><br />
-						28 Main Street<br />
-						Peterborough, NH 03458<br />
-						603-352-0681<br />
-						<br />
-
-						<b>Prim Fashion Boutique</b><br />
-						87 Lafayette Rd. #9<br />
-						Hampton Falls, NH 03844<br />
-						603-926-1500<br />
-						<br />
-
-						<br />
-						<span>NEW JERSEY</span>
-						<br />
-
-						<b>Princeton Art Museum</b><br />
-						Museum Store<br />
-						Princeton, NJ  08544<br />
-						609-258-7674<br />
-						<br />
-
-						<br />
-						<span>NEW YORK</span>
-						<br />
-
-						<b>Winter Sun and Summer Moon</b><br />
-						10-14 East Market St.<br />
-						Rhinebeck, NY  12572<br />
-						<br />
-
-						<br />
-						<span>RHODE ISLAND</span>
-						<br />
-
-						<b>Preservation Society of Newport,<br />
-						Mansions of Newport Gift Shops</b><br />
-						424 Bellevue Ave<br />
-						Newport, RI  02840<br />
-						401-847-1000x174<br />
-						<br />
-
-						<br />
-						<span>SOUTH CAROLINA</span>
-						<br />
-
-						<b>Cotton Mill Exchange,<br />
-						South Carolina State Museum</b><br />
-						301 Gervais St.<br />
-						Columbia, SC  29201<br />
-						803-898-4968<br />
-						<br />
-
-						<br />
-						<span>TENNESSEE</span>
-						<br />
-
-						<b>Country Music Hall of Fame</b><br />
-						222 Fifth Ave South<br />
-						Nashville, TN  372023<br />
-						615-291-8415<br />
-						<br />
-
-						<b>Pink Palace</b><br />
-						3050 Central Ave<br />
-						Memphis, TN  38111<br />
-						901-636-2392<br />
-						<br />
-
-						<br />
-						<span>TEXAS</span>
-						<br />
-
-						<b>Briscoe Western Art Museum</b><br />
-						210 West Market St.<br />
-						San Antonio, TX  78205<br />
-						210-299-4499x581<br />
-						<br />
-
-						<b>The Sixth Floor Museum Gift Shop</b><br />
-						501 Elm St.<br />
-						Dallas, TX  75202<br />
-						214-747-6660<br />
-						<br />
-
-						<br />
-						<span>VIRGINIA</span>
-						<br />
-
-						<b>Covet</b><br />
-						5140B Wilson Blvd<br />
-						Arlington, VA  22205<br />
-						703-247-9797<br />
-						<br />
-
-						<b>Lemon Twist</b><br />
-						4518 North Lee Hwy<br />
-						Arlington, VA  22207<br />
-						703-524-4680<br />
-						<br />
-
-						<b>Virginia Museum of Fine Arts</b><br />
-						200 North Blvd<br />
-						Richmond, VA  23220<br />
-						<br />
-
-						<br />
-						<span>VERMONT</span>
-						<br />
-
-						<b>Everywear for Everybody</b><br />
-						233 Main St.<br />
-						Vergennes, VT  05491<br />
-						802-877-6811<br />
-						<br />
-
-						<b>In Company</b><br />
-						344 Mountain Rd.<br />
-						Stowe, VT 05672<br />
-						802.253.4595<br />
-						<br />
-						<br />
-						<h6>All 47 stores</h6>
-					</div>
+					<div id="retailers"> </div>
 				</article>
 			</section>
 			<footer>
