Optimized image and file paths

--- a/jewelry.html
+++ b/jewelry.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html"> <img src="images/OTLogo2016.png"/> </a>
+			<a href="index.html"> <img src="img/src/logo/logo.png"/> </a>
 		</header>
 		<main>
 			<header>
@@ -25,11 +25,11 @@
 				</div>
 				<div>
 					<a href="https://www.facebook.com/myorangetwist" target="newtab">
-						<img src="images/FB_Logo.png"/>
+						<img src="img/src/share/facebook.png"/>
 					</a>
 					<a href="mailto:?subject=Orange Twist Jewelry website&body=Check this jewelry out! 
 									 http://www.myorangetwist.com.">
-						<img src="images/Share.png"/>
+						<img src="img/src/share/email.png"/>
 					</a>
 				</div>
 			</header>
@@ -39,7 +39,7 @@
 				</div>
 				<article>
 					<h1>Jewelry</h1>
-					<a href="assets/OT-2018.pdf" target:"newtab">
+					<a href="src/catalogs/OT-2018.pdf" target:"newtab">
 						<h3> View the 2018 Orange Twist Jewelry Collection Catalog </h3>
 					</a>
 					<div id="pages"></div>
@@ -50,15 +50,15 @@
 					Orange Twist jewelry is sold exclusively to the trade. Please 
 					<a href="contact.html">contact us</a> for pricing and ordering information.
 					<br />
-					<a href="assets/OT-2018.pdf" target="newtab">
+					<a href="src/catalogs/OT-2018.pdf" target="newtab">
 						 Download the 2018 Orange Twist Jewelry Collection Catalog 
 					</a>    
 					<br />
 					Download our previous catalogs: 
-					<a href="assets/OT-2016.pdf" target="newtab">2016</a>,
-					<a href="assets/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
-					<a href="assets/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
-					<a href="assets/OT-2014Holiday.pdf" target="newtab">2014 Fall/Holiday</a>
+					<a href="src/catalogs/OT-2016.pdf" target="newtab">2016</a>,
+					<a href="src/catalogs/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
+					<a href="src/catalogs/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
+					<a href="src/catalogs/OT-2014Holiday.pdf" target="newtab">2014 Fall/Holiday</a>
 				</p>     
 			</footer>
 		</main>
