--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html"> <img src="images/OTLogo2016.png"/> </a>
+			<a href="index.html"> <img src="img/src/logo/logo.png"/> </a>
 		</header>
 		<main>
 			<header>
@@ -22,11 +22,11 @@
 				</div>
 				<div>
 					<a href="https://www.facebook.com/myorangetwist" target="newtab">
-						<img src="images/FB_Logo.png"/>
+						<img src="img/src/share/facebook.png"/>
 					</a>
 					<a href="mailto:?subject=Orange Twist Jewelry website&body=Check this jewelry out! 
 									 http://www.myorangetwist.com.">
-						<img src="images/Share.png"/>
+						<img src="img/src/share/email.png"/>
 					</a>
 				</div>
 			</header>
@@ -42,7 +42,7 @@
 					<div>
 						<div class="top sale">
 							<h2>Main Contact Info</h2>
-							<img class="triangle sale" src="images/contact/show.png"/>
+							<img class="triangle sale" src="img/contact/show.png"/>
 						</div>
 						<div class="bottom sale">
 							<p>
@@ -55,7 +55,7 @@
 						</div>
 						<div class="top northeast">
 							<h2>Northeast Region</h2>
-							<img class="triangle northeast" src="images/contact/show.png"/>
+							<img class="triangle northeast" src="img/contact/show.png"/>
 						</div>
 						<div class="bottom northeast">
 							<p>
@@ -66,7 +66,7 @@
 						</div>
 						<div class="top mid">
 							<h2>Mid-Atlantic Region</h2>
-							<img class="triangle mid" src="images/contact/show.png"/>
+							<img class="triangle mid" src="img/contact/show.png"/>
 						</div>
 						<div class="bottom mid">
 							<p>
@@ -80,7 +80,7 @@
 						</div>
 						<div class="top other">
 							<h2>Southeast, Central and West Coast Regions</h2>
-							<img class="triangle other" src="images/contact/show.png"/>
+							<img class="triangle other" src="img/contact/show.png"/>
 						</div>
 						<div class="bottom other">
 							<p>
@@ -91,7 +91,7 @@
 						</div>
 						<div class="top national">
 							<h2>National Sales: Museum Gift Shops</h2>
-							<img class="triangle national" src="images/contact/show.png"/>
+							<img class="triangle national" src="img/contact/show.png"/>
 						</div>
 						<div class="bottom national">
 							<p>
@@ -108,15 +108,15 @@
 					Orange Twist jewelry is sold exclusively to the trade. Please 
 					<a href="contact.html">contact us</a> for pricing and ordering information.
 					<br />
-					<a href="assets/OT-2018.pdf" target="newtab">
+					<a href="src/catalogs/OT-2018.pdf" target="newtab">
 						 Download the 2018 Orange Twist Jewelry Collection Catalog 
 					</a>    
 					<br />
 					Download our previous catalogs: 
-					<a href="assets/OT-2016.pdf" target="newtab">2016</a>,
-					<a href="assets/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
-					<a href="assets/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
-					<a href="assets/OT-2014Holiday.pdf" target="newtab">2014 Fall/Holiday</a>
+					<a href="src/catalogs/OT-2016.pdf" target="newtab">2016</a>,
+					<a href="src/catalogs/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
+					<a href="src/catalogs/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
+					<a href="src/catalogs/OT-2014Holiday.pdf" target="newtab">2014 Fall/Holiday</a>
 				</p>     
 			</footer>
 		</main>
