contact.html, retailers.html map now JS driven, improved

--- a/contact.html
+++ b/contact.html
@@ -39,68 +39,7 @@
 						products, policies or our company. Below is our contact information for our sales
 						representatives and general information email. We look forward to hearing from you!
 					</p>  
-					<div>
-						<div class="top sale">
-							<h2>Main Contact Info</h2>
-							<img class="triangle sale" src="img/contact/show.png"/>
-						</div>
-						<div class="bottom sale">
-							<p>
-								Please contact us with any questions, press requests or more information:<br />
-								206 N. Cherry Street<br />
-								Falls Church, VA 22046<br />
-								Email: <a href="mailto:info@myorangetwist.com">info@myorangetwist.com</a><br />
-								Cell: 703-403-2487 <br />
-							</p>            
-						</div>
-						<div class="top northeast">
-							<h2>Northeast Region</h2>
-							<img class="triangle northeast" src="img/contact/show.png"/>
-						</div>
-						<div class="bottom northeast">
-							<p>
-								Deb Fanton<br />
-								Email: <a href="mailto:dfanton@comcast.net">dfanton@comcast.net</a><br />
-								Cell: 781-4667-9034
-							</p>            
-						</div>
-						<div class="top mid">
-							<h2>Mid-Atlantic Region</h2>
-							<img class="triangle mid" src="img/contact/show.png"/>
-						</div>
-						<div class="bottom mid">
-							<p>
-								Cindy Kilmer<br />
-								Email: <a href="mailto:andrea@myorangetwist.com">cindykilmer@myorangetwist.com</a><br />
-								Cell: 703-470-1996<br /><br />
-								Cyndi Stephenson<br />
-								Email: <a href="mailto:cyndistephenson@myorangetwist.com">cyndistephenson@myorangetwist.com</a><br />
-								Cell: 703-953-5900
-							</p>            
-						</div>
-						<div class="top other">
-							<h2>Southeast, Central and West Coast Regions</h2>
-							<img class="triangle other" src="img/contact/show.png"/>
-						</div>
-						<div class="bottom other">
-							<p>
-								Andrea Roberson<br />
-								Email: <a href="mailto:cindykilmer@myorangetwist.com">andrea@myorangetwist.com</a><br />
-								Cell: 703-470-1996
-							</p>            
-						</div>
-						<div class="top national">
-							<h2>National Sales: Museum Gift Shops</h2>
-							<img class="triangle national" src="img/contact/show.png"/>
-						</div>
-						<div class="bottom national">
-							<p>
-								Donald Burns, Burns Rep Group<br />
-								Email: <a href="mailto:dfjburns@msn.com">dfjburns@msn.com</a><br />
-								Cell: 215-668-5887
-							</p>            
-						</div>
-					</div>
+					<div id="contact"> </div>
 				</article>
 			</section>
 			<footer>
