--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/contact.css" rel="stylesheet" type="text/css" />
 		<script src="scripts/jquery/jquery-1.10.1.min.js"></script>
+		<script src="scripts/templates.js"></script>
 		<script src="scripts/contact.js"></script>
 		<title>Orange Twist Jewelry | Contact</title>
 	</head>
@@ -42,22 +43,7 @@
 					<div id="contact"> </div>
 				</article>
 			</section>
-			<footer>
-				<p>
-					Orange Twist jewelry is sold exclusively to the trade. Please 
-					<a href="contact.html">contact us</a> for pricing and ordering information.
-					<br />
-					<a href="src/catalogs/OT-2018.pdf" target="newtab">
-						 Download the 2018 Orange Twist Jewelry Collection Catalog 
-					</a>    
-					<br />
-					Download our previous catalogs: 
-					<a href="src/catalogs/OT-2016.pdf" target="newtab">2016</a>,
-					<a href="src/catalogs/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
-					<a href="src/catalogs/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
-					<a href="src/catalogs/OT-2014Holiday.pdf" target="newtab">2014 Fall/Holiday</a>
-				</p>     
-			</footer>
+			<footer> </footer>
 		</main>
 		<div>
 			<a href="https://www.linkedin.com/in/chappy-asel-b0629856/" title="Chappy Asel on LinkedIn"
