--- a/retail.html
+++ b/retail.html
@@ -5,6 +5,7 @@
 		<link href="styles/retail.css" rel="stylesheet" type="text/css" />
 		<script src="scripts/jquery/jquery-1.10.1.min.js"></script>
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAME8im3xQY-WxsD5h7aYK9UfwQoxtmD3Y"></script>
+		<script src="scripts/templates.js"></script>
 		<script src="scripts/map.js"></script>
 		<script src="scripts/retail.js"></script>
 		<title>Orange Twist Jewelry | Retailers</title>
@@ -45,22 +46,7 @@
 					<div id="retailers"> </div>
 				</article>
 			</section>
-			<footer>
-				<p>
-					Orange Twist jewelry is sold exclusively to the trade. Please 
-					<a href="contact.html">contact us</a> for pricing and ordering information.
-					<br />
-					<a href="src/catalogs/OT-2018.pdf" target="newtab">
-						 Download the 2018 Orange Twist Jewelry Collection Catalog 
-					</a>    
-					<br />
-					Download our previous catalogs: 
-					<a href="src/catalogs/OT-2016.pdf" target="newtab">2016</a>,
-					<a href="src/catalogs/OT-2015Holiday.pdf" target="newtab">2015 Fall/Holiday</a>, 
-					<a href="src/catalogs/OT-2015Summer.pdf" target="newtab">2015 Spring/Summer</a>, 
-					<a href="src/catalogs/OT-2014Holiday.pdf" target="newtab">2014 Fall/Holiday</a>
-				</p>     
-			</footer>
+			<footer> </footer>
 		</main>
 		<div>
 			<a href="https://www.linkedin.com/in/chappy-asel-b0629856/" title="Chappy Asel on LinkedIn"
