--- a/about.html
+++ b/about.html
@@ -9,27 +9,10 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html"> <img src="img/src/logo/logo.png"/> </a>
+			<a href="index.html"> <img src="img/src/logo/logo.png" alt="Orange Twist logo"/> </a>
 		</header>
 		<main>
-			<header>
-				<div id="links">
-					<a href="index.html"> <p>Home</p> </a>
-					<a href="jewelry.html"> <p>Jewelry</p> </a>
-					<a class="selected" href="about.html"> <p>About Us</p> </a>
-					<a href="retail.html"> <p>Retailers</p> </a>
-					<a href="contact.html"> <p>Contact</p> </a>
-				</div>
-				<div>
-					<a href="https://www.facebook.com/myorangetwist" target="newtab">
-						<img src="img/src/share/facebook.png"/>
-					</a>
-					<a href="mailto:?subject=Orange Twist Jewelry website&body=Check this jewelry out! 
-									 http://www.myorangetwist.com.">
-						<img src="img/src/share/email.png"/>
-					</a>
-				</div>
-			</header>
+			<header> </header>
 			<section>
 				<div class="flexslider"></div>
 				<article>
@@ -53,7 +36,7 @@
 						wide variety of fabulous boutiques and fine museum stores around the corner and across
 						the country.  We have also proudly designed pieces for sale in a number of catalogs.
 					</p>
-					<img src="img/about/signature.png"/>
+					<img src="img/about/signature.png" alt="signature"/>
 				</article>
 			</section>
 			<footer> </footer>
