--- a/contact.html
+++ b/contact.html
@@ -10,27 +10,10 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html"> <img src="img/src/logo/logo.png"/> </a>
+			<a href="index.html"> <img src="img/src/logo/logo.png" alt="Orange Twist logo"/> </a>
 		</header>
 		<main>
-			<header>
-				<div id="links">
-					<a href="index.html"> <p>Home</p> </a>
-					<a href="jewelry.html"> <p>Jewelry</p> </a>
-					<a href="about.html"> <p>About Us</p> </a>
-					<a href="retail.html"> <p>Retailers</p> </a>
-					<a class="selected" href="contact.html"> <p>Contact</p> </a>
-				</div>
-				<div>
-					<a href="https://www.facebook.com/myorangetwist" target="newtab">
-						<img src="img/src/share/facebook.png"/>
-					</a>
-					<a href="mailto:?subject=Orange Twist Jewelry website&body=Check this jewelry out! 
-									 http://www.myorangetwist.com.">
-						<img src="img/src/share/email.png"/>
-					</a>
-				</div>
-			</header>
+			<header> </header>
 			<section>
 				<div class="flexslider"></div>
 				<article>
@@ -40,7 +23,7 @@
 						products, policies or our company. Below is our contact information for our sales
 						representatives and general information email. We look forward to hearing from you!
 					</p>  
-					<div id="contact"> </div>
+					<div id="contacts"> </div>
 				</article>
 			</section>
 			<footer> </footer>
