--- a/jewelry.html
+++ b/jewelry.html
@@ -13,34 +13,17 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html"> <img src="img/src/logo/logo.png"/> </a>
+			<a href="index.html"> <img src="img/src/logo/logo.png" alt="Orange Twist logo"/> </a>
 		</header>
 		<main>
-			<header>
-				<div id="links">
-					<a href="index.html"> <p>Home</p> </a>
-					<a class="selected" href="jewelry.html"> <p>Jewelry</p> </a>
-					<a href="about.html"> <p>About Us</p> </a>
-					<a href="retail.html"> <p>Retailers</p> </a>
-					<a href="contact.html"> <p>Contact</p> </a>
-				</div>
-				<div>
-					<a href="https://www.facebook.com/myorangetwist" target="newtab">
-						<img src="img/src/share/facebook.png"/>
-					</a>
-					<a href="mailto:?subject=Orange Twist Jewelry website&body=Check this jewelry out! 
-									 http://www.myorangetwist.com.">
-						<img src="img/src/share/email.png"/>
-					</a>
-				</div>
-			</header>
+			<header> </header>
 			<section>
 				<div class="flexslider">
 					<ul class="slides" id="slides"> </ul>
 				</div>
 				<article>
 					<h1>Jewelry</h1>
-					<a href="src/catalogs/OT-2018.pdf" target:"newtab">
+					<a href="src/catalogs/OT-2018.pdf" target="newtab">
 						<h3> View the 2018 Orange Twist Jewelry Collection Catalog </h3>
 					</a>
 					<div id="pages"></div>
