Added Google analytics

--- a/retail.html
+++ b/retail.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/retail.css" rel="stylesheet" type="text/css" />
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120289024-1"></script>
 		<script src="scripts/jquery/jquery-1.10.1.min.js"></script>
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAME8im3xQY-WxsD5h7aYK9UfwQoxtmD3Y"></script>
+		<script src="scripts/analytics.js"></script>
 		<script src="scripts/templates.js"></script>
 		<script src="scripts/map.js"></script>
 		<script src="scripts/retail.js"></script>
