--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="styles/style.css" rel="stylesheet" type="text/css" />
 		<link href="styles/contact.css" rel="stylesheet" type="text/css" />
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120289024-1"></script>
 		<script src="scripts/jquery/jquery-1.10.1.min.js"></script>
+		<script src="scripts/analytics.js"></script>
 		<script src="scripts/templates.js"></script>
 		<script src="scripts/contact.js"></script>
 		<title>Orange Twist Jewelry | Contact</title>
